--- a/Views/Department/Index.cshtml
+++ b/Views/Department/Index.cshtml
@@ -2,16 +2,19 @@
 @{
 
 }
-<div class="container">
-    <h1>Department</h1>
-    <a class="text-primary" asp-controller="Department" asp-action="Create">Create a Department</a>
+<div class="container mt-4">
+    <h1 class="mb-3">Departments</h1>
+    <a class="btn btn-primary mb-3" asp-controller="Department" asp-action="Create">Create a Department</a>
+
     <table class="table table-bordered table-striped">
-        <thead>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Code</th>
-        <th>Location</th>
-        <th>Acction</th>
+        <thead class="thead-dark">
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Code</th>
+                <th>Location</th>
+                <th>Action</th>
+            </tr>
         </thead>
         <tbody>
             @foreach (var item in Model)
@@ -22,11 +25,8 @@
                     <td>@item.Code</td>
                     <td>@item.Location</td>
                     <td>
-                        <a asp-controller="Department" asp-action="Edit"
-                           asp-route-id="@item.Id">Edit</a>
-                        <a onclick="return confirm('Delete department @item.Name')"
-                           asp-controller="Department" asp-action="Delete"
-                          asp-route-id="@item.Id">Delete</a> 
+                        <a class="btn btn-warning btn-sm" asp-controller="Department" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                        <a class="btn btn-danger btn-sm" onclick="return confirm('Delete department @item.Name')" asp-controller="Department" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                     </td>
                 </tr>
             }
